# openalpr

./: .gitignore  CMakeLists.txt  conan_readme.md  conanfile.py
src/: CMakeLists.txt
src/bindings/go/: CMakeLists.txt
src/bindings/java/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt
src/misc_utilities/: CMakeLists.txt
src/openalpr/: CMakeLists.txt  alpr_c.h
src/openalpr/support/: CMakeLists.txt  filesystem.cpp
src/statedetection/: CMakeLists.txt
src/video/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py  example.cpp
